[package]
name = "structalock"
version = "0.1.3"
description = "StructaLock - Vote-Escrowed Token Standard for Structa"
edition = "2025"
homepage = "https://structalabs.com"
repository = "https://github.com/StructaLabs/Structa-Core"
authors = ["Structa Team <team@structalabs.com>"]
license = "AGPL-3.0"
keywords = ["solana", "anchor", "governance", "structa"]

[lib]
crate-type = ["cdylib", "lib"]
name = "structa-lock"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.22"
anchor-spl = "^0.22"
locked-voter = { version = "^0.5.1", features = ["cpi"] }
num-traits = "0.2"
vipers = "^2.0"
yi = { version = "^0.3.0", features = ["cpi"] }
